Fix some floating keyboard assumptions that there is only one display

Moving the floating keyboard on a secondary monitor did not work well.
The keyboard movement would be bounded to certain nonsensical ranges
that would correspond to the primary display.

Bug: 828701
Change-Id: Ic910ee48d4cfa17b37334b7d9c719090da502414
Reviewed-on: https://chromium-review.googlesource.com/994632
Commit-Queue: Blake O'Hare <blakeo@chromium.org>
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547999}
Former-commit-id: a92a80957ca24f62a9dfd1ac0f3023159ce60c00