ui/keyboard/display_util.cc
@@ -14,7 +14,12 @@ namespace keyboard {
 DisplayUtil::DisplayUtil() {}
 
 int64_t DisplayUtil::GetNearestDisplayIdToWindow(aura::Window* window) const {
-  return display::Screen::GetScreen()->GetDisplayNearestWindow(window).id();
+  return GetNearestDisplayToWindow(window).id();
+}
+
+display::Display DisplayUtil::GetNearestDisplayToWindow(
+    aura::Window* window) const {
+  return display::Screen::GetScreen()->GetDisplayNearestWindow(window);
 }
 
 }  // namespace keyboard
